--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,6 @@ gen
 ### Node template
 # Logs
 logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -153,7 +152,6 @@ dist
 
 ### Laravel template
 /vendor/
-node_modules/
 npm-debug.log
 yarn-error.log
 
@@ -170,9 +168,55 @@ public_html/storage
 public_html/hot
 
 storage/*.key
-.env
 Homestead.yaml
 Homestead.json
+
 /.vagrant
 .phpunit.result.cache
+/composer.phar
 
+/laravel/public/*
+!/laravel/public/index.php
+!/laravel/public/.htaccess
+!/laravel/public/web.config
+!/laravel/public/robots
+!/laravel/public/mix-manifest.json
+
+/laravel/composer.phar
+/laravel/node_modules
+/laravel/public/hot
+/laravel/public/storage
+/laravel/storage/*.key
+/laravel/vendor
+/laravel/.env
+/laravel/.env.backup
+/laravel/.phpunit.result.cache
+/laravel/Homestead.json
+/laravel/Homestead.yaml
+/laravel/npm-debug.log
+/laravel/yarn-error.log
+
+
+/view/.DS_Store
+/view/node_modules
+/view/dist
+/view/coverage
+
+/view/tests/e2e/reports/
+/view/selenium-debug.log
+
+# local env files
+/view/.env.local
+/view/.env.*.local
+
+# Log files
+/view/npm-debug.log*
+/view/yarn-debug.log*
+/view/yarn-error.log*
+
+# Editor directories and files
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
