--- a/laravel/package.json
+++ b/laravel/package.json
@@ -9,6 +9,7 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
+    "publishConfig": { "registry": "https://npm.pkg.github.com/" },
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
