--- a/view/package.json
+++ b/view/package.json
@@ -1,22 +1,6 @@
 {
-  "name": "@coreui/coreui-free-vue-laravel-admin-template",
+  "name": "view",
   "version": "1.0.0",
-  "description": "CoreUI Free Vue Laravel Bootstrap Admin Template",
-  "author": {
-    "name": "CoreUI",
-    "url": "https://coreui.io",
-    "github": "https://github.com/coreui",
-    "twitter": "https://twitter.com/core_ui"
-  },
-  "contributors": [
-    {
-      "name": "CoreUI Team",
-      "url": "https://github.com/orgs/coreui/people"
-    }
-  ],
-  "homepage": "http://coreui.io",
-  "copyright": "Copyright 2020 creativeLabs Łukasz Holeczek",
-  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
