--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,11 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi; @php artisan jwt:secret; @php artisan migrate:refresh --seed"
+            "@php artisan key:generate --ansi; "
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan optimize; @php artisan jwt:secret; @php artisan migrate:refresh --seed"
         ]
     }
 }
