--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -15,14 +15,14 @@
         "spatie/laravel-medialibrary": "^7.19.0",
         "spatie/laravel-permission": "^3.6",
         "tymon/jwt-auth": "^1.0.0",
-        "laravel/ui": "^2.0"
-    },
-    "require-dev": {
-        "facade/ignition": "^2.0",
+        "laravel/ui": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "facade/ignition": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
+    },
+    "require-dev": {
     },
     "config": {
         "optimize-autoloader": true,
